2010-02-17  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_exaile03.c : FIX: issue 62, cannot get status in exaile 0.3.0 due to forget to parse status string

	* src/ol_path_pattern.c (ol_path_pattern_for_each): FIX: issue 61, not all filename pattern is checked.

2010-02-14  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_exaile03.c (ol_player_exaile03_get_status): FIX: Support Exaile 0.3.1

2010-02-11  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_notify.c : Fix: Notification doesn't display

2010-02-09  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c (ol_osd_window_unmap): FIX: OSD Window unset mapped flag twice.
	(ol_osd_window_destroy): FIX: Memory leak when destroy OSD Window

	* src/ol_debug.h (ol_logf): CHANGE: Change the log output format

	* src/ol_osd_module.c: Add: Background support for OSD Window

2010-02-08  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_amarok1.c: FIX: issue 53, compile fail on amarok1

	* src/ol_notify.c: ADD: Notification of music info

	* src/ol_main.c: ADD: Launch prefered player if not available player is running

2010-02-07  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_search_dialog.c (ol_search_dialog_download_click): CHANGE: Do not hide search dialog after download clicked

	* src/ol_menu.c (internal_adjust_lyric_offset): CHANGE: Exchange the effect of advance and delay lyric

	* src/ol_player_quodlibet.c: ADD: Quod libet support

2010-02-06  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_trayicon.c: CHANGE: Display infomation of the playing song in tooltip of tray icon

	* src/ol_menu.c: ADD: Adjust lyric delay

	* src/ol_lrc_parser.c (ol_lrc_parser_set_lyric_file_offset): FIX: Bug of setting offset of lyric file

2010-02-05  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_search_dialog.c: ADD: Select lrc fetch engine in search dialog.

	* src/ol_lrc_engine_list.c: REFACTORY: Extract from ol_option.c
